--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -26,8 +26,8 @@ jobs:
 
       - name: Configure Git
         run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
 
       - name: Deploy to GitHub Pages
         run: npm run deploy
